# byte-shield

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTEXTO_RETO_TLS.MD  Dockerfile  README.md  dashboard.py  generar_reporte.py  out.json  pyproject.toml  reporte.json  requirements.txt  tls_scanner.py
.github/workflows/: ci.yml
compliance/: ESTANDARES_CUMPLIMIENTO.json
ejemplos/: targets.json
examples/: reporte.html  reporte.json
helm/byteshield/: Chart.yaml  values.yaml
helm/byteshield/templates/: deployment.yaml  service.yaml
scripts/: install.sh  run_agent.sh
src/byteshield/: __init__.py  __main__.py  ai_enrichment.py  cli.py  dependencies.py  ia.py  ingesta.py  motor_reglas.py  motor_tls.py  pipeline.py  report_router.py  reporte_html.py  reporte_pdf.py  reporting.py  utils.py
src/byteshield/api/: __init__.py  models.py  server.py
src/openclaw_agent/: __init__.py  actions.py  orchestrator.py  triggers.py
static/: app.js  index.html  style.css
terraform/example/: main.tf
tests/: test_motor_reglas.py
